Fix error in protocol revving https://bugs.webkit.org/show_bug.cgi?id=176191

Protocol definition was mastered out of later iOS submissions, causing them to not build.

Reviewed by Tim Horton.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView changeSelectionWithGestureAt:withGesture:withState:]):



Canonical link: https://commits.webkit.org/192857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221457 268f45cc-cd09-0410-ab3c-d52691b4dbfc